fixed bug with Cumulative Layout Shift

--- a/css/style.css
+++ b/css/style.css
@@ -407,10 +407,6 @@ h6,
     transition: .5s;
 }
 
-.service-item:hover .service-title {
-    top: -100%;
-}
-
 .service-item .service-text {
     position: absolute;
     overflow: hidden;
@@ -426,10 +422,6 @@ h6,
     transition: .5s;
 }
 
-.service-item:hover .service-text {
-    top: 0;
-}
-
 .service-item .service-text::before {
     position: absolute;
     content: "";
@@ -440,10 +432,6 @@ h6,
     transform: skewY(-12deg);
     background: #FFFFFF;
     transition: .5s;
-}
-
-.service-item:hover .service-text::before {
-    top: -55px;
 }
 
 .service-item .btn {
